<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AroundMe.Settings.AboutActivity"
    android:background="#ffffff">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/alizarin"/>

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/AppVersion"
        android:textColor="@color/alizarin"
        android:textSize="15dp"
        android:layout_above="@+id/textView9"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/AppBuild"
        android:textSize="15dp"
        android:textColor="#000000"
        android:id="@+id/textView9"
        android:layout_marginBottom="60dp"
        android:layout_above="@+id/textView6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_copy"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_all"
        android:id="@+id/textView7"
        android:textColor="#000000"
        android:textSize="15dp"
        android:layout_above="@+id/button_rate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/button_rate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:background="@color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
