<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border_login"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/bg_login_input"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/bg_login_input"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray3"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_login"
            android:text="Log In"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignEnd="@+id/layout_age_settings_wrapper"
            android:layout_alignLeft="@+id/layout_age_settings_wrapper"
            android:layout_alignRight="@+id/layout_age_settings_wrapper"
            android:layout_alignStart="@+id/layout_age_settings_wrapper"
            android:layout_below="@+id/layout_age_settings_wrapper"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_corner_phone"
            android:gravity="center"
            android:text="@string/login_with_phone_number"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/layout_age_settings_wrapper"
            android:layout_alignLeft="@+id/layout_age_settings_wrapper"
            android:layout_alignRight="@+id/layout_age_settings_wrapper"
            android:layout_alignStart="@+id/layout_age_settings_wrapper"
            android:layout_below="@+id/layout_age_settings_wrapper"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/login_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/link_forgot"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/forgot_your_details_get_help_signing_in"
            android:textColor="@color/gray0"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/gray2"
                android:orientation="horizontal">

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/around"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>


    <TextView
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/btn_signup"
        android:layout_centerHorizontal="true"
        android:background="@color/gray2"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout3"
        android:layout_centerHorizontal="true"
        android:text="@string/me"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

</RelativeLayout>