<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_forgot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/border_login">

        <ImageView android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />


        <!--  Email Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_lost"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_dont"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="14dp"
            android:layout_below="@+id/textView12"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp" />



        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:padding="12dp"
            android:text="@string/forgot_reset"
            android:background="@drawable/button_corner_red"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray"
                    android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="5dp"
                    android:hint="@string/login_email"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="12dp"
                    android:paddingRight="12dp"
                    android:textColorHighlight="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_remember"
        android:id="@+id/link_login"
        android:layout_above="@+id/resetButton"
        android:layout_alignRight="@+id/textView12"
        android:layout_alignEnd="@+id/textView12"
        android:layout_marginBottom="20dp" />

</RelativeLayout>