<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_location"
    android:background="#fff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/alizarin"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:id="@+id/linearLayout3">

    </LinearLayout>




    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/image"
        android:layout_marginTop="16dp"
        >


    </LinearLayout>


    <TextView
        android:id="@+id/button_get_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:lines="1"
        android:padding="5dp"

        android:text="@string/go_to_the_store"
        android:textColor="#2b73e1" />

    <Button

        android:id="@+id/button_travel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/textView41"
        android:layout_alignLeft="@+id/textView41"
        android:layout_alignRight="@+id/textView41"
        android:layout_alignStart="@+id/textView41"
        android:layout_below="@+id/textView41"
        android:layout_marginBottom="5dp"


        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/button_corner"
        android:gravity="center"
        android:padding="9dp"
        android:text="@string/vip_activte"
        android:textColor="#fff"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/you_have_not1"
        android:id="@+id/textView32"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_below="@+id/linear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/first_activete1"
        android:id="@+id/textView41"
        android:layout_below="@+id/textView32"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray2"
        android:layout_alignRight="@+id/textView32"
        android:layout_alignEnd="@+id/textView32"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:gravity="center"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/menu_visitor"

        android:layout_alignTop="@+id/linearLayout3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cost_100_credits"
        android:textColor="#FFE37A7A"
        android:gravity="center"
        android:textSize="13sp"
        android:layout_below="@+id/textView32"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />

</RelativeLayout>
